# Sentinel2-Change-Analysis

./: README.md  aoi.geojson  example_change_detection.py  pyproject.toml  requirements.txt
data/processed/: change_binary_sam.tif  change_features.geojson  change_map_sam.tif  change_overlay_sam.tif
data/sentinel2_20230812/: B04.tif.aux.xml
data/sentinel2_20230902/: B04.tif.aux.xml
src/sentinel_change/change_detection/: sam.py
src/sentinel_change/io/: raster_stack.py
src/sentinel_change/pipelines/: __main__.py  part1_prepare_data.py  part2_change_detection.py  part3_change_vectorize.py  part4_visualize.py
